# drone

./: libuvc_installation_jetson.sh  readme.md  rk3588_max_performance.sh
doc/d435/: libuvc_installation_jetson.sh  libuvc_installation_rk3588.sh
doc/flyshark/: d430标定参数.txt
doc/livox/nav_drone_files/: readme.docx
doc/livox/nav_drone_files/livox/shfiles/: start_lidar.sh
doc/livox/nav_drone_files/livox/src/FAST_LIO/src/: laserMapping.cpp
doc/livox/nav_drone_files/livox/src/lidar_to_mavros/: package.xml
doc/livox/nav_drone_files/livox/src/lidar_to_mavros/launch/: lidar_to_mavros.launch
doc/livox/nav_drone_files/nav_drone/shfiles/: ctrl.sh  land.sh  rviz.sh  takeoff.sh
doc/livox/nav_drone_files/nav_drone/src/planner/plan_manage/launch/: single_run_in_exp.launch
doc/livox/nav_drone_files/nav_drone/src/realflight_modules/px4ctrl/config/: ctrl_param_fpv.yaml
doc/livox/nav_drone_files/shfiles/: lidar.sh
doc/livox/ws_livox/: readme.txt
doc/livox/ws_livox/shfiles/: lidar_to_mavros.sh
doc/livox/ws_livox/src/FAST_LIO/src/: laserMapping.cpp
doc/livox/ws_livox/src/lidar_to_mavros/: CMakeLists.txt
doc/livox/ws_livox/src/lidar_to_mavros/launch/.ipynb_checkpoints/: lidar_to_mavros-checkpoint.launch  vins_to_mavros-checkpoint.launch
doc/livox/ws_livox/src/lidar_to_mavros/src/: lidar_to_mavros.cpp
doc/livox/ws_livox/src/livox_ros_driver2/config/: MID360_config.json
doc/livox/ws_livox/src/livox_ros_driver2/launch_ROS1/: msg_MID360.launch  rviz_MID360.launch
